Django Notebooks Improvement

--- a/D_Web_Development_2/01. Introduction to Django.ipynb
+++ b/D_Web_Development_2/01. Introduction to Django.ipynb
@@ -149,7 +149,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Go to your browser and type `localhost:8000`\n",
+    "\n",
+    "![Web_Dev2](./images/img_it_worked.png)\n",
+    "\n",
     "This starts a local server so we can run our project locally. Whenever we want to see the changes we made or to just browse the site, we do this. We can also have a separate tab running this in the shell and it will auto-reload whenever it detects changes in the project. Sometimes, it takes a while for it to detect changes.\n",
+    "\n",
     "\n",
     "```\n",
     "You have unapplied migrations; your app may not work properly until they are applied.\n",
@@ -163,23 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36;1mOperations to perform:\u001b[0m\r\n",
-      "\u001b[1m  Apply all migrations: \u001b[0msessions, admin, auth, contenttypes, account\r\n",
-      "\u001b[36;1mRunning migrations:\u001b[0m\r\n",
-      "  Rendering model states...\u001b[32;1m DONE\u001b[0m\r\n",
-      "  Applying account.0001_initial...\u001b[32;1m OK\u001b[0m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python manage.py migrate"
    ]
@@ -221,7 +214,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This creates a new app within our current project. It creates the folder and prepares some files that you'll most likely use. New apps must be registered in the __`INSTALLED_APPS`__ list in __`settings.py`__.\n",
+    "This creates a new app within our current project. It creates the folder and prepares some files that you'll most likely use. New apps must be registered in the __`INSTALLED_APPS`__ list in __`accounts/settings.py`__:\n",
+    "\n",
+    "```\n",
+    "INSTALLED_APPS = [\n",
+    "    'django.contrib.admin',\n",
+    "    'django.contrib.auth',\n",
+    "    'django.contrib.contenttypes',\n",
+    "    'django.contrib.sessions',\n",
+    "    'django.contrib.messages',\n",
+    "    'django.contrib.staticfiles',\n",
+    "    'search',\n",
+    "    'google',\n",
+    "    'account'\n",
+    "]\n",
+    "```\n",
     "\n",
     "### Create Migrations\n",
     "\n",
@@ -230,21 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36;1mMigrations for 'account':\u001b[0m\r\n",
-      "  \u001b[1m0001_initial.py\u001b[0m:\r\n",
-      "    - Create model Profile\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python manage.py makemigrations"
    ]
@@ -283,6 +280,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "After entering the command above on CLI, you will be asked for the following, one by one:\n",
+    "    \n",
+    "```\n",
+    "Username:\n",
+    "Email address:\n",
+    "Password:\n",
+    "Password (again):\n",
+    "```\n",
+    "\n",
+    "Once you have entered the information and there are no discrepancies, you will see this message:\n",
+    "\n",
+    "__`Superuser created successfully.`__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Django comes built in with an admin functionality for your models. As the developer of the project, you can manage all your models from this admin page. This means that you can see and test your models even before creating views and controllers. You can view and modify users and change permissions from there. After creating models registering them to the admin is the next logical step and the superuser is the key to using it.\n",
     "\n",
     "### Others\n",
@@ -314,7 +329,10 @@
     "\n",
     "# Creating new apps\n",
     "python manage.py startapp account  # add app to INSTALLED_APPS, make a model\n",
+    "```\n",
     "\n",
+    "#### The below commands are not yet discussed on this chapter, but we'll be tackling these commands on the next notebook:\n",
+    "```\n",
     "# edit models.py and view in admin/\n",
     "\n",
     "# Whenever an app's model is changed\n",
@@ -325,6 +343,7 @@
     "# Run in its own tab whenever you want to test code\n",
     "python manage.py shell\n",
     "```\n",
+    "\n",
     "\n",
     "Go ahead and run these commands. They are your friends."
    ]
