--- a/D_Web_Development_2/02. Settings.ipynb
+++ b/D_Web_Development_2/02. Settings.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Before going straight to the code, this is a good time to mention that it will be good to familiarize yourself with the settings. The __`settings.py`__ file is where Django stores project configuration. You can find it in the __project package folder__. There are a lot of available settings within Django. Some third party packges require some variables to be set for them to work properly. Most of these settings have defaults that don't need to be changed, some you might want to change, and some you'll need to change. Knowing how to configure your project can save you from common problems and help you deploy your project.\n",
     "\n",
-    "It's a Python script so it needs to follow the proper syntax. You can set values in any way that's acceptable in Python. It can import values from other modules so settings can be structured in a way that you can have a `development.py` and `production.py` that both inherit from `base.py` but have their own environment-specific settings. If you'll be using a different file besides the default `settings.py`, change the default value for `DJANGO_SETTINGS_MODULE` in `wsgi.py` which refers to 'project_name.settings'.\n",
+    "It's a Python script so it needs to follow the proper syntax. You can set values in any way that's acceptable in Python. It can import values from other modules so settings can be structured in a way that you can have a `development.py` and `production.py` that both inherit from `base.py` but have their own environment-specific settings. If you'll be using a different file besides the default `settings.py`, change the default value for `DJANGO_SETTINGS_MODULE` in `wsgi.py` which refers to `'project_name.settings'.`\n",
     "\n",
     "Refer to the [documentation](https://docs.djangoproject.com/en/dev/ref/settings/) for a complete reference on the settings. Below are some of the common ones you'll often encounter.\n",
     "\n",
@@ -104,6 +104,14 @@
    "outputs": [],
    "source": [
     "%load google/settings.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Note:__ \n",
+    "You don't need to write everything from scratch. The initial settings are already prepared by Django. It's up to you to modify it based on your app's needs."
    ]
   }
  ],
