--- a/D_Web_Development_2/03. Django Models and ORM.ipynb
+++ b/D_Web_Development_2/03. Django Models and ORM.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Django models are Python classes that inherit from `django.db.models.Model`. Attributes of this class represent database rows. Many kinds of fields are available to represent different data types and relationships.\n",
     "\n",
-    "Using the management commands, create a new project called \"google\" and an app for \"account\". If you executed the commands in the previous notebook, you'd already have the \"google\" project with \"search\" and \"accounts\" apps.\n",
+    "Using the management commands, create a new project called \"google\" and an app for \"account\". If you executed the commands in the previous notebook, you'd already have the \"google\" project with \"search\" and \"account\" apps.\n",
     "\n",
     "All the code below will only work from within Django. Add the model below to the `models.py` of your \"account\" app. "
    ]
@@ -27,7 +27,6 @@
    "source": [
     "# In account/models.py\n",
     "from django.db import models\n",
-    "\n",
     "\n",
     "class Profile(models.Model):\n",
     "    name = models.CharField(max_length=42)"
@@ -51,7 +50,7 @@
     "# In your settings.py\n",
     "INSTALLED_APPS = [\n",
     "    # ...\n",
-    "    'accounts',\n",
+    "    'account',\n",
     "    # ...\n",
     "]"
    ]
@@ -190,7 +189,7 @@
     "# In the shell (python manage.py shell)\n",
     "from account.models import Profile\n",
     "\n",
-    "Profile.objects.all()  # will get an error if from Jupyter"
+    "Profile.objects.all()  # will get an error if from Jupyter. Run on CLI."
    ]
   },
   {
@@ -198,6 +197,7 @@
    "metadata": {},
    "source": [
     "This returns a `QuerySet` containing all instances of our class in our database table. The `objects` attribute of our class allows us to access an model manager. It has methods for retrieving the class instances in various ways.\n",
+    "\n",
     "\n",
     "### Creating and Editing\n",
     "\n",
@@ -242,6 +242,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Expected output:\n",
+    "`[<Profile: Profile object>]`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### String Representation of Objects\n",
+    "\n",
+    "`[<Profile: Profile object>]` wasn't very helpful. We know what class it belongs to but `Profile object` isn't very descriptive. Let's change that by adding a **`__str__`** (`__unicode__` for Python 2.x) method to our object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# In account/models.py\n",
+    "from datetime import datetime\n",
+    "from django.db import models\n",
+    "\n",
+    "class Profile(models.Model):\n",
+    "    name = models.CharField(max_length=42)\n",
+    "    photo = models.ImageField(null=True, blank=True)\n",
+    "    created = models.DateField(default=datetime.now)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# In the shell (python manage.py shell)\n",
+    "Profile.objects.all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that's better. `[<Profile: Guido Van Rossum>]` tells us which instance from what class. Overriding `__str__` makes a big difference on readability."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "Now we know how to create and save objects into the database, let's edit and update the information.\n",
     "\n",
     "We still have our `profile` object (name=\"Guido Van Rossum\"). I remember he's Dutch and the Dutch \"Van\" preposition is not capitalized. Let's fix that."
@@ -267,58 +325,13 @@
    "source": [
     "That updates our info in the database. Django knows if it's the same instance. If you change any of its attributes and call `.save()` on it, the database is updated.\n",
     "\n",
-    "### String Representation of Objects\n",
-    "\n",
-    "`[<Profile: Profile object>]` wasn't very helpful. We know what class it belongs to but `Profile object` isn't very descriptive. Let's change that by adding a **`__str__`** (`__unicode__` for Python 2.x) method to our object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# In account/models.py\n",
-    "from django.db import models\n",
-    "# wala yung datetime\n",
-    "\n",
-    "\n",
-    "class Profile(models.Model):\n",
-    "    name = models.CharField(max_length=42)\n",
-    "    photo = models.ImageField(null=True, blank=True)\n",
-    "    created = models.DateField(default=datetime.now)\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return self.name"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The local server should detect changes and restart. Now let's try that again."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# In the shell (python manage.py shell)\n",
-    "Profile.objects.all()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that's better. `[<Profile: Guido van Rossum>]` tells us which instance from what class. Overriding `__str__` makes a big difference on readability.\n",
-    "\n",
     "### Primary Keys\n",
     "\n",
     "Let's get an object from our `QuerySet`. This time We'll do it by slicing the result."
@@ -334,13 +347,15 @@
    "source": [
     "# In the shell (python manage.py shell)\n",
     "profile = Profile.objects.all()[0]\n",
-    "profile.pk"
+    "profile.pk  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Expected output: `1`\n",
+    "\n",
     "Django provides a `pk` or “primary key” shortcut. By default, it refers to `id`."
    ]
   },
@@ -360,6 +375,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Expected output: `True`\n",
+    "\n",
     "Django gives each model an auto-incrementing `id` field. This behavior can be overridden by specifying exactly one field with the field option [`primary_key=True`](https://docs.djangoproject.com/en/dev/ref/models/fields/#django.db.models.Field.primary_key).\n",
     "\n",
     "### Filtering and Excluding\n",
@@ -376,22 +393,16 @@
    "outputs": [],
    "source": [
     "# In the shell (python manage.py shell)\n",
-    "person = Person.objects.filter(id=1)\n",
+    "profile = Profile.objects.filter(id=1)\n",
+    "profile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Expected output: `[<Profile: Guido van Rossum>]`\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ^ Has name error: NameError: name 'Person' is not defined"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Field Lookups\n",
     "\n",
     "Database queries can accept keyword arguments like our first example. It can also accept [field lookups](https://docs.djangoproject.com/en/dev/ref/models/querysets/#field-lookups) equivalent to the SQL `WHERE` clause."
@@ -433,7 +444,7 @@
    "outputs": [],
    "source": [
     "# In the shell (python manage.py shell)\n",
-    "person = Person.objects.get(id=1)"
+    "profile = Profile.objects.get(id=1)"
    ]
   },
   {
@@ -454,7 +465,7 @@
    "outputs": [],
    "source": [
     "# In the shell (python manage.py shell)\n",
-    "person = Person.objects.get(id__in=[1, 2])"
+    "profile = Profile.objects.get(id__in=[1, 2])"
    ]
   },
   {
@@ -472,13 +483,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# In the shell (python manage.py shell)\n",
-    "person = Person.objects.get(id=1)\n",
-    "person.delete()"
+    "profile = Profile.objects.get(id=1)\n",
+    "profile.delete()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Expected output: `(1, {'account.Profile': 1})`"
    ]
   },
   {
@@ -508,7 +526,7 @@
    "source": [
     "# In account/models.py\n",
     "from django.db import models\n",
-    "\n",
+    "from datetime import datetime\n",
     "\n",
     "class Profile(models.Model):\n",
     "    name = models.CharField(max_length=42)\n",
@@ -539,6 +557,7 @@
     "# In account/models.py\n",
     "from django.contrib.auth.models import User\n",
     "from django.db import models\n",
+    "from datetime import datetime\n",
     "\n",
     "\n",
     "class Profile(models.Model):\n",
