--- a/D_Web_Development_2/04. Views and URLs.ipynb
+++ b/D_Web_Development_2/04. Views and URLs.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "urlpatterns = [\n",
     "    url(r'^admin/', admin.site.urls),\n",
-    "    url(r'^accounts/', include('accounts.urls'))\n",
+    "    url(r'^account/', include('account.urls'))\n",
     "]"
    ]
   },
@@ -92,9 +92,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The URLs of our `accounts` app has been added to the `accounts/` namespace in our app. When a user navigates to this url, Django searches URL patterns within the included app. Our empty string pattern matches the root of that address so navigating to the address `accounts/` calls our function.\n",
+    "The URLs of our `account` app has been added to the `account/` namespace in our app. When a user navigates to this url, Django searches URL patterns within the included app. Our empty string pattern matches the root of that address so navigating to the address `account/` calls our function.\n",
     "\n",
-    "If no server is running, use the `python manage.py runserver` command to have one running so we can see the results. In your browser, navigate to [127.0.0.1:8000/accounts/](http://127.0.0.1:8000/accounts/) to see the result.\n",
+    "If no server is running, use the `python manage.py runserver` command to have one running so we can see the results. In your browser, navigate to [127.0.0.1:8000/account/](http://127.0.0.1:8000/account/) to see the result.\n",
+    "\n",
+    "\n",
+    "![Web_Dev2](./images/img_hello_world.png)\n",
+    "\n",
     "\n",
     "Congratulations! You made Django work!\n",
     "\n",
@@ -154,11 +158,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember that this app lives under the `accounts/` URL. Our second function can be reached if a user navigates to `accounts/render/`. But we don't have a template yet so let's create one.\n",
+    "Remember that this app lives under the `account/` URL. Our second function can be reached if a user navigates to `account/render/`. But we don't have a template yet so let's create one.\n",
     "\n",
     "## Template \n",
     "\n",
-    "Our new view adds a variable in the page context. Not only will we make an HTML page appear, we'll be able to add variables to it. Let's have a simple template showing our variable. We'll get more into templates in the next notebook. For now, it's good enough that we can show variables sent to the page's context."
+    "Our new view adds a variable in the page context. Not only will we make an HTML page appear, we'll be able to add variables to it. Let's have a simple template showing our variable. We'll get more into templates in the next notebook. For now, it's good enough that we can show variables sent to the page's context.\n",
+    "\n",
+    "#### Note: The code below is just an example and you may run it here on the Jupyter notebook."
    ]
   },
   {
@@ -190,7 +196,7 @@
    "source": [
     "There's something different in our template - the double curly braces around the word `variable`. Remember that our context is a dictionary and `variable` is one of its keys. The double curly braces mean that we are accessing a variable that is a key in our page's context. This is how variables can be shown in a template. We'll learn more about templates in a nother notebook.\n",
     "\n",
-    "Since we've already added this app's URLs to our project, this view will already be accessible in the assigned namespace. Notice the regular expression pattern. You know what that means, right? Visit [127.0.0.1:8000/accounts/render/](http://127.0.0.1:8000/accounts/render/) to see the results.\n",
+    "Since we've already added this app's URLs to our project, this view will already be accessible in the assigned namespace. Notice the regular expression pattern. You know what that means, right? Visit [127.0.0.1:8000/account/render/](http://127.0.0.1:8000/account/render/) to see the results.\n",
     "\n",
     "## [Redirect](https://docs.djangoproject.com/en/dev/topics/http/shortcuts/#redirect)\n",
     "\n",
@@ -267,10 +273,10 @@
    },
    "outputs": [],
    "source": [
-    "# In account/urls.py\n",
+    "# In account/urls.py --> google?\n",
     "urlpatterns = [\n",
     "    url(r'^admin/', admin.site.urls),\n",
-    "    url(r'^accounts/', include('accounts.urls', namespace='accounts'))\n",
+    "    url(r'^account/', include('account.urls', namespace='account'))\n",
     "]"
    ]
   },
