Updated the Notebooks

--- a/D_Web_Development_2/01. Introduction to Django.ipynb
+++ b/D_Web_Development_2/01. Introduction to Django.ipynb
@@ -75,7 +75,7 @@
     "  │   ├── urls.py\n",
     "  ├── static/\n",
     "  └── templates/\n",
-    "      └── account/\n",
+    "      └── template.html\n",
     "      ...\n",
     "```\n",
     "\n",
