--- a/D_Web_Development_2/04. Views and URLs.ipynb
+++ b/D_Web_Development_2/04. Views and URLs.ipynb
@@ -130,6 +130,20 @@
    "source": [
     "The `render()` function accepts the request object, a template string and a context dictionary. Not only can be show any template we want, we can add any variable into the page's context.\n",
     "\n",
+    "Before proceeding in modifying our App URLs, let's change some settings in our our **`settings.py`** file first. As mentioned in notebook no.1 (_Introduction to Django_), we can specify a list of paths in the `DIRS` key and Django will include those in its search.\n",
+    "\n",
+    "Go to `settings.py` and let's modify the template path like so:\n",
+    "```\n",
+    "TEMPLATES = [\n",
+    "    {\n",
+    "        'DIRS': [os.path.join(BASE_DIR, 'templates')],\n",
+    "        'APP_DIRS': True,\n",
+    "    },\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "Now we're ready to proceed with App URLs.\n",
+    "\n",
     "## App URLs\n",
     "\n",
     "Now let's add this view to our app's URLs."
@@ -158,13 +172,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember that this app lives under the `account/` URL. Our second function can be reached if a user navigates to `account/render/`. But we don't have a template yet so let's create one.\n",
+    "Remember that this app lives under the `account/` URL. Our second function can be reached if a user navigates to `account/render/`. But we don't have a template yet so let's create one:\n",
+    "\n",
+    "1. Inside your project folder, create a folder named **`'templates'`**.\n",
+    "2. Inside the 'templates' folder that you just created, create an empty file and name it **`'templates.html'`**\n",
+    "\n",
+    "Your directory should now look like this:\n",
+    "```\n",
+    "google/\n",
+    "  ├── account/\n",
+    "  ├── google/  # project package folder\n",
+    "  ├── search/\n",
+    "  ├── manage.py\n",
+    "  └── templates/\n",
+    "      └── template.html\n",
+    "```\n",
+    "\n",
+    "The **`templates`** folder is relative to our **`manage.py`** file. \n",
     "\n",
     "## Template \n",
     "\n",
     "Our new view adds a variable in the page context. Not only will we make an HTML page appear, we'll be able to add variables to it. Let's have a simple template showing our variable. We'll get more into templates in the next notebook. For now, it's good enough that we can show variables sent to the page's context.\n",
     "\n",
-    "#### Note: The code below is just an example and you may run it here on the Jupyter notebook."
+    "#### Note:  Copy the sample html code below and paste it on the **`'template.html`** file that you have created earlier'"
    ]
   },
   {
@@ -197,6 +227,9 @@
     "There's something different in our template - the double curly braces around the word `variable`. Remember that our context is a dictionary and `variable` is one of its keys. The double curly braces mean that we are accessing a variable that is a key in our page's context. This is how variables can be shown in a template. We'll learn more about templates in a nother notebook.\n",
     "\n",
     "Since we've already added this app's URLs to our project, this view will already be accessible in the assigned namespace. Notice the regular expression pattern. You know what that means, right? Visit [127.0.0.1:8000/account/render/](http://127.0.0.1:8000/account/render/) to see the results.\n",
+    "\n",
+    "![Web_Dev2](./images/img_template.png)\n",
+    "\n",
     "\n",
     "## [Redirect](https://docs.djangoproject.com/en/dev/topics/http/shortcuts/#redirect)\n",
     "\n",
@@ -273,7 +306,7 @@
    },
    "outputs": [],
    "source": [
-    "# In account/urls.py --> google?\n",
+    "# In google/urls.py\n",
     "urlpatterns = [\n",
     "    url(r'^admin/', admin.site.urls),\n",
     "    url(r'^account/', include('account.urls', namespace='account'))\n",
@@ -446,7 +479,7 @@
    "source": [
     "Browsing to /articles/2005/03/ would match the third pattern in the list. With `2005` and `03` matching the patterns in the parenthesis, they are passed as positional arguments. Django calls `views.month_archive(request, '2005', '03')`. The pattern requires four digits then two digits so it can't match anything with one or three digits in either pattern.\n",
     "\n",
-    "Browsing to /articles/2003/ matches the first pattern because Django searches the list in order. If the trailing slash is missing, is also can't match since our pattern requires it.\n",
+    "Browsing to /articles/2003/ matches the first pattern because Django searches the list in order. If the trailing slash is missing, it also can't match since our pattern requires it.\n",
     "\n",
     "To pass a keyword argument to a URL, named regular-expression groups are used. The pattern is `(?P<name>pattern)`, where `name` is the group name and pattern is the regular expression pattern. It's enclosed in a parenthesis so the value matching this pattern will be the value to the name as a keyword argument passed to the function."
    ]
