--- a/D_Web_Development_2/05. Templates and Forms.ipynb
+++ b/D_Web_Development_2/05. Templates and Forms.ipynb
@@ -10,56 +10,18 @@
     "\n",
     "## [Variables](https://docs.djangoproject.com/en/dev/ref/templates/language/#variables)\n",
     "\n",
-    "In Django templates, variables are shown by using double curly braces. We used a template example in the previous notebook with a variable."
+    "In Django templates, variables are shown by using double curly braces. We used a template example in the previous notebook named `'template.html'` with a variable.\n",
+    "\n",
+    "Now let's try to replace the contents of that notebook with the HTML code below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<html>\n",
-       "<head>\n",
-       "  <meta charset=\"utf-8\">\n",
-       "  <meta http-equiv=\"x-ua-compatible\" content=\"ie=edge\">\n",
-       "  <title>Hello world ph0wZx</title>\n",
-       "  <meta name=\"description\" content=\"\">\n",
-       "  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
-       "</head>\n",
-       "<body>\n",
-       "\n",
-       "<h1>Hello world</h1>\n",
-       "\n",
-       "<p>{{ message }}</p>\n",
-       "\n",
-       "<p>{{ variable }}</p>\n",
-       "<pre>\"variable\" is a key in our page's context</pre>\n",
-       "\n",
-       "<p>{% if object %}{{ object }}{% endif %}</p>\n",
-       "\n",
-       "{% if form %}\n",
-       "<form method=\"POST\" enctype=\"multipart/form-data\">\n",
-       "    {% csrf_token %}\n",
-       "    {{ form.as_p }}\n",
-       "    <input type=\"submit\">\n",
-       "</form>\n",
-       "{% endif %}\n",
-       "</body>\n",
-       "</html>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<html>\n",
@@ -90,6 +52,13 @@
     "{% endif %}\n",
     "</body>\n",
     "</html>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Web_Dev2](./images/img_hello_world2.png)"
    ]
   },
   {
@@ -139,45 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<!DOCTYPE html>\n",
-       "<html lang=\"en\">\n",
-       "<head>\n",
-       "    <link rel=\"stylesheet\" href=\"style.css\" />\n",
-       "    <title>{% block title %}My Django site{% endblock %}</title>\n",
-       "</head>\n",
-       "\n",
-       "<body>\n",
-       "    <div id=\"sidebar\">\n",
-       "        {% block sidebar %}\n",
-       "        <ul>\n",
-       "            <li><a href=\"/\">Home</a></li>\n",
-       "            <li><a href=\"/blog/\">Blog</a></li>\n",
-       "        </ul>\n",
-       "        {% endblock %}\n",
-       "    </div>\n",
-       "\n",
-       "    <div id=\"content\">\n",
-       "        {% block content %}{% endblock %}\n",
-       "    </div>\n",
-       "</body>\n",
-       "</html>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<!DOCTYPE html>\n",
@@ -213,33 +148,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "{% extends \"base.html\" %}\n",
-       "\n",
-       "{% block title %}KLab Cyscorpions - Sting The World With Your Imagination{% endblock %}\n",
-       "\n",
-       "{% block content %}\n",
-       "  {% for entry in blog_entries %}\n",
-       "    <h2>{{ entry.title }}</h2>\n",
-       "    <p>{{ entry.body }}</p>\n",
-       "  {% endfor %}\n",
-       "{% endblock %}"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "{% extends \"base.html\" %}\n",
