Fixed Typo Errors

--- a/A_Beginner_1/04. Operators and Delimiters.ipynb
+++ b/A_Beginner_1/04. Operators and Delimiters.ipynb
@@ -898,7 +898,7 @@
     "a = 2\n",
     "b = 2\n",
     "\n",
-    "print(a == b"
+    "print(a == b)"
    ]
   },
   {
@@ -954,7 +954,7 @@
    "metadata": {},
    "source": [
     "_Note_: \n",
-    "> `!=` and `<>` both mean not equal by value in Python 2.x,  but `!=` is the preferred syntax in in Python 2.x and the only supported option in Python 3.x."
+    "> `!=` and `<>` both mean not equal by value in Python 2.x,  but `!=` is the preferred syntax in Python 2.x and the only supported option in Python 3.x."
    ]
   },
   {
