Added some exercises

--- a/A_Beginner_2/3.3 Data Types - Strings.ipynb
+++ b/A_Beginner_2/3.3 Data Types - Strings.ipynb
@@ -566,6 +566,58 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(4) Print the full name using placeholders. The output should be like this:\n",
+    "__Your first name is John Doe__\n",
+    "\n",
+    "Use the variables `first_name` and `last_name`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "first_name = 'John'\n",
+    "last_name = 'Doe'\n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(5) String Slicing: Slice the string assinged in `my_string` variable. The output should be: __love__\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_string = 'Python is Life; Python is Love' \n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
