--- a/A_Beginner_2/3.5 Data Types - Tuples.ipynb
+++ b/A_Beginner_2/3.5 Data Types - Tuples.ipynb
@@ -185,6 +185,26 @@
     "\n",
     "print(my_tuple.index('banana'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise\n",
+    "\n",
+    "(1) Print how many lowercase 'a' are there in the tuple named `letter_a`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "letter_a = ('a','a','d','c','a','o','q','a','d','a','q','d','q','a')\n"
+   ]
   }
  ],
  "metadata": {
