--- a/A_Beginner_2/3.6 Data Types - Dictionaries.ipynb
+++ b/A_Beginner_2/3.6 Data Types - Dictionaries.ipynb
@@ -463,6 +463,37 @@
     "- A dictionary is also known as \"Associate Array\", \"Map\", \"Hash Map\",  or \"Unordered Map\".\n",
     "> The conceptual implementation of a dictionary is that of a hash table, meaning, checks for existence are quite fast. We can determine if a specific key is present in the dictionary without needing to examine every element (which gets slower as the dictionary gets bigger). The Python interpreter can just go to the location key \"should be\" at (if it's in the dictionary) and see if key is actually there.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise\n",
+    "\n",
+    "(1) Create an empty dictionary. Name it `my_dict`.\n",
+    "\n",
+    "(2) Add a new key: __`Red`__, and its value should be __`Apple`__.\n",
+    "\n",
+    "(3) Add another key: __`Yellow`__, with a value __`Banana`__.\n",
+    "\n",
+    "(4) Add the last key: __`Purple`__, with a valie __`Grapes`__.\n",
+    "\n",
+    "(5) Print how many fruits are there in the dictionary. Output should be like this: __There are 3 items on the menu.__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code below:\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
