--- a/A_Beginner_2/3.1 Data Types - Booleans.ipynb
+++ b/A_Beginner_2/3.1 Data Types - Booleans.ipynb
@@ -45,17 +45,17 @@
     "b = 2\n",
     "c = 3\n",
     "\n",
-    "print(1, a == 1)\n",
-    "print(2, b == 3)"
+    "print(a == 1)\n",
+    "print(b == 3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Integers were assigned to variables `a`, `b`, and `c`.  Each `print` statement on the examples above prints a number and an expression. \n",
+    "Integers were assigned to variables `a`, `b`, and `c`.  Each `print` statement on the examples above prints an expression. \n",
     "\n",
-    "If the expression is True, `True` will be printed, and `False` otherwise."
+    "If the expression satisfies the condition, `True` will be printed, and `False` otherwise."
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar on the first example, `True` will be printed, and `False` otherwise. Go ahead and run the code below."
+    "Similar on the first example, `True` will be printed if the expression satisfies the condition, and `False` otherwise. Go ahead and run the code below."
    ]
   },
   {
@@ -104,6 +104,39 @@
     "print(2, a == 7 and b == 7)\n",
     "print(3, a == 6 or b == 7)\n",
     "print(4, a == 7 or b == 7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise\n",
+    "\n",
+    "Complete the `print` statements below by assigning some values to make the output all `True`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 13\n",
+    "b = 17\n",
+    "c = 14\n",
+    "d = 18\n",
+    "e = 16\n",
+    "f = 15\n",
+    "g = 18\n",
+    "\n",
+    "# Assign values below\n",
+    "print(d == )\n",
+    "print(a == )\n",
+    "print(g ==  and d == )\n",
+    "print(e == or b == )\n",
+    "print(g != )\n"
    ]
   }
  ],
