Added some exercises

--- a/A_Beginner_3/01. Loops and Iteration.ipynb
+++ b/A_Beginner_3/01. Loops and Iteration.ipynb
@@ -287,6 +287,54 @@
     "else:\n",
     "    print(\"else:\", x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise:\n",
+    "\n",
+    "(1) Print the fruits in vertical order. Use the `For` loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fruit = [\"Apple\", \"Mango\", \"Banana\", \"Orange\",\"Grapes\"]\n",
+    "\n",
+    "# Write your code below\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(2) Print _'An apple a day keeps the doctor away.'_ if the value of the variable `fruit` is `'Apple'`. If not, print '`Sad`'. Use `while` loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fruit = 'Banana'\n",
+    "\n",
+    "while fruit == 'Apple':\n",
+    "    print('An apple a day keeps the doctor away.')\n",
+    "    \n",
+    "else:\n",
+    "    print('Sad')"
+   ]
   }
  ],
  "metadata": {
