--- a/B_Intermediate_1/01. Basics of OOP in Python.ipynb
+++ b/B_Intermediate_1/01. Basics of OOP in Python.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "The keyword `class` introduces a class definition. It's followed by the class name, then usually a parenthesized list of derived class/es, and ends with a colon. The indented statements below it constitute the class' attributes.\n",
     "\n",
-    "There's usually a parenthesized list of derived class/es. **Usually**, because there is (or used to be?) an [old-style and new-style](https://docs.python.org/2/reference/datamodel.html#new-style-and-classic-classes) class. Old-style classes don't have this. Having said that, this notebook covers new-style classes since this is the [recommended way](https://wiki.python.org/moin/NewClassVsClassicClass) to create a class in Python."
+    "There's usually a parenthesized list of derived class/es. **Usually**, because there is (or used to be?) an [old-style and new-style](https://docs.python.org/2/reference/datamodel.html#new-style-and-classic-classes) class. Old-style classes don't have this. Having said that, this notebook covers new-style classes since this is the [recommended way](https://wiki.python.org/moin/NewClassVsClassicClass) to create a class in Python.\n",
+    "\n",
+    "__Note:__ We'll be defining a few classes. Some of the later classes will depend on the first few classes. The code needs to be executed in order from top to bottom. Just run the codes and proceed. :)"
    ]
   },
   {
@@ -491,7 +493,7 @@
    "source": [
     "# define a FatherClass with a can_sing method that returns True\n",
     "# and a MotherClass with a can_dance method that returns True\n",
-    "# define a KLabEmployeeClass inheriting from both FatherClass and MotherClass\n",
+    "# define a ChildClass inheriting from both FatherClass and MotherClass\n",
     "# it should have a can_sing_and_dance method that returns true if self.can_sing and self.can_dance returns True\n",
     "# we'll use these classes in the next exercise\n",
     "\n",
@@ -619,11 +621,11 @@
    },
    "outputs": [],
    "source": [
-    "# we need to modify our FatherClass and KLabEmployeeClass\n",
+    "# we need to modify our FatherClass and ChildClass\n",
     "\n",
     "# modify the FatherClass.can_sing() method by printing \"bow\" after singing\n",
     "\n",
-    "# add a location attribute to KLabEmployeeClass with a default value of None\n",
+    "# add a location attribute to ChildClass with a default value of None\n",
     "# modify its can_sing method to check first if the location is 'home',\n",
     "# if so, proceed with its inherited method, otherwise, return False\n",
     "# (should also print bow at the end of song but without rewriting the method... use super)\n",
